RESOLVED FIXED 273335
[macOS] If you scroll the page without moving the mouse, we fail to update the cursor as things scroll underneath it
https://bugs.webkit.org/show_bug.cgi?id=273335
Summary [macOS] If you scroll the page without moving the mouse, we fail to update th...
Simon Fraser (smfr)
Reported 2024-04-26 12:03:21 PDT
We fail to update the cursor when the only events we've handled since page load are wheel events.
Attachments
Simon Fraser (smfr)
Comment 1 2024-04-26 12:03:37 PDT
Simon Fraser (smfr)
Comment 2 2024-04-26 12:10:47 PDT
Simon Fraser (smfr)
Comment 3 2024-05-02 16:56:38 PDT
EWS
Comment 4 2024-05-02 19:02:23 PDT
Committed 278297@main (e7ab50a7e7be): <https://commits.webkit.org/278297@main> Reviewed commits have been landed. Closing PR #27813 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.